--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'com.github.chathuralakmal:AndroidImagePopup:1.2.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 //    implementation 'cn.pedant.sweetalert:library:1.3'
+    implementation "com.github.barteksc:android-pdf-viewer:2.8.2"
 
 
 
